--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mqtt": "^4.3.7",
     "multer": "^1.3.0",
     "multer-gridfs-storage": "^1.3.0",
-    "react-helmet-async": "^1.3.0"
+    "react-helmet-async": "^1.3.0",
+    "socket.io": "^4.6.1"
   }
 }
